--- a/index.html
+++ b/index.html
@@ -1,1 +1,17 @@
+<!DOCTYPE html>
+<html>
+  <head>
+    <meta charset="UTF-8">
+    <title>初めてのjQuery</title>
+    <script tupe="text/javascript" src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
+    <script tupe="text/javascript">
+      $(function(){
+        $("p").css("color","red");
+      });
+    </script>
+  </head>
+  <body>
+    <p>テスト</P>
+  </body>
+</html>
 
