--- a/index.html
+++ b/index.html
@@ -7,11 +7,16 @@
     <script tupe="text/javascript">
       $(function(){
         $("p").css("color","red");
+        $("#toggle").on("click",function(){
+          $("#target").fadeToggle("slow");
+        });
       });
     </script>
   </head>
   <body>
     <p>テスト</P>
+  <div id="target">表示,非表示される要素</div>
+  <button id="toggle">切り替え</button>
   </body>
 </html>
 
