--- a/index.html
+++ b/index.html
@@ -6,15 +6,17 @@
     <script tupe="text/javascript" src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
     <script tupe="text/javascript">
       $(function(){
-        $("p").css("color","red");
+        $("s").css("color","bule");
         $("#toggle").on("click",function(){
           $("#target").fadeToggle("slow");
         });
       });
+      $("button").click(function(){
+        $("s")
     </script>
   </head>
   <body>
-    <p>テスト</P>
+    <s>テスト</s>
   <div id="target">表示,非表示される要素</div>
   <button id="toggle">切り替え</button>
   </body>
