--- a/index.html
+++ b/index.html
@@ -12,11 +12,12 @@
         });
       });
       $("button").click(function(){
-        $("s")
+        $("p").toggle("show");
+      });
     </script>
   </head>
   <body>
-    <s>テスト</s>
+    <s>こんにちは！</s>
   <div id="target">表示,非表示される要素</div>
   <button id="toggle">切り替え</button>
   </body>
