--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         });
       });
       $("button").click(function(){
-        $("p").toggle("show");
+        $("s").toggle("show");
       });
     </script>
   </head>
