--- a/index.html
+++ b/index.html
@@ -6,8 +6,11 @@
     <script tupe="text/javascript" src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
     <script tupe="text/javascript">
       $(function(){
-       $("div:hidden:first").fadeIn("show");
+     
+        $(document.body).click(function(){
+          $("div:hidden:first").fadeIn("show");
       });
+        
       });
     </script>
     <style>
