--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
   </head>
   <body>
     <span>Open</span>
+    div#four { background:#f10; }
     <div id="one"></div>
     <div id="two"></div>
     <div id="three"></div> 
