--- a/index.html
+++ b/index.html
@@ -27,11 +27,11 @@
     </style>
   </head>
   <body>
-    <span>Open</span>
-  
+    <span>出現(click)</span>
     <div id="one"></div>
     <div id="two"></div>
     <div id="three"></div> 
+    <p>□をclickで消える</p>
 
   </body>
 </html>
